creusot/tests/should_fail/bug/695.coma
module M_695__inversed_if [#"695.rs" 6 0 6 78]
  let%span s6950 = "695.rs" 10 15 10 20
  let%span s6951 = "695.rs" 8 15 8 19
  let%span s6952 = "695.rs" 4 11 4 77
  let%span s6953 = "695.rs" 6 59 6 63
  let%span s6954 = "695.rs" 6 68 6 74
  let%span s6955 = "695.rs" 5 10 5 89
  let%span sops6 = "../../../../creusot-contracts/src/std/ops.rs" 158 27 158 52
  let%span sops7 = "../../../../creusot-contracts/src/std/ops.rs" 140 0 164 1
  let%span sops8 = "../../../../creusot-contracts/src/std/ops.rs" 131 14 131 100
  let%span sops9 = "../../../../creusot-contracts/src/std/ops.rs" 136 14 136 101
  let%span sresolve10 = "../../../../creusot-contracts/src/resolve.rs" 41 20 41 34
  let%span sinvariant11 = "../../../../creusot-contracts/src/invariant.rs" 24 8 24 18
  let%span sops12 = "../../../../creusot-contracts/src/std/ops.rs" 99 15 99 48
  let%span sops13 = "../../../../creusot-contracts/src/std/ops.rs" 100 14 100 35
  let%span sops14 = "../../../../creusot-contracts/src/std/ops.rs" 105 14 105 31
  let%span sops15 = "../../../../creusot-contracts/src/std/ops.rs" 110 15 110 29
  let%span sops16 = "../../../../creusot-contracts/src/std/ops.rs" 111 15 111 26
  let%span sops17 = "../../../../creusot-contracts/src/std/ops.rs" 112 14 112 28
  let%span sops18 = "../../../../creusot-contracts/src/std/ops.rs" 117 14 117 133
  
  type t_C'0
  
  predicate precondition'0 (self : t_C'0) (_2 : ())
  
  use prelude.prelude.Borrow
  
  predicate inv'2 (_1 : t_C'0)
  
  predicate inv'3 (_1 : ())
  
  predicate postcondition'0 (self : t_C'0) (_2 : ()) (_3 : bool)
  
  predicate inv'4 (_1 : bool)
  
  predicate inv'0 (_1 : t_C'0)
  
  predicate invariant'0 (self : t_C'0) =
    [%#sinvariant11] inv'0 self
  
  axiom inv_axiom'0 [@rewrite] : forall x : t_C'0 [inv'2 x] . inv'2 x = invariant'0 x
  
  axiom inv_axiom'1 [@rewrite] : forall x : () [inv'3 x] . inv'3 x = true
  
  axiom inv_axiom'2 [@rewrite] : forall x : bool [inv'4 x] . inv'4 x = true
  
  predicate inv'5 (_1 : bool)
  
  axiom inv_axiom'3 [@rewrite] : forall x : bool [inv'5 x] . inv'5 x = true
  
  let rec call'0 (self:t_C'0) (args:()) (return'  (ret:bool))= {[@expl:precondition] inv'3 args}
    {[@expl:precondition] inv'2 self}
    {[@expl:precondition] [%#sops6] precondition'0 self args}
    any [ return' (result:bool)-> {inv'4 result} {[%#sops7] postcondition'0 self args result} (! return' {result}) ] 
  
  predicate resolve'0 (_1 : t_C'0)
  
  type t_B'0
  
  predicate precondition'1 (self : t_B'0) (_2 : bool)
  
  predicate inv'1 (_1 : t_B'0)
  
  predicate postcondition_once'0 (self : t_B'0) (_2 : bool) (_3 : ())
  
  let rec call_once'0 (self:t_B'0) (args:bool) (return'  (ret:()))= {[@expl:precondition] inv'5 args}
    {[@expl:precondition] inv'1 self}
    {[@expl:precondition] [%#sops7] precondition'1 self args}
    any [ return' (result:())-> {inv'3 result} {[%#sops7] postcondition_once'0 self args result} (! return' {result}) ] 
  
  use prelude.prelude.Intrinsic
  
  predicate postcondition_mut'0 (self : borrowed t_C'0) (_2 : ()) (_3 : bool)
  
  predicate resolve'1 (self : borrowed t_C'0) =
    [%#sresolve10] self.final = self.current
  
  function fn_mut'0 (self : borrowed t_C'0) (args : ()) (res : bool) : ()
  
  axiom fn_mut'0_spec : forall self : borrowed t_C'0, args : (), res : bool . [%#sops8] postcondition_mut'0 self args res
  = (resolve'1 self /\ postcondition'0 self.current args res)
  
  predicate postcondition_once'1 (self : t_C'0) (_2 : ()) (_3 : bool)
  
  function fn_once'0 (self : t_C'0) (args : ()) (res : bool) : ()
  
  axiom fn_once'0_spec : forall self : t_C'0, args : (), res : bool . [%#sops9] postcondition_once'1 self args res
  = (resolve'0 self /\ postcondition'0 self args res)
  
  predicate unnest'0 (self : t_C'0) (_2 : t_C'0)
  
  function postcondition_mut_unnest'0 (self : borrowed t_C'0) (args : ()) (res : bool) : ()
  
  axiom postcondition_mut_unnest'0_spec : forall self : borrowed t_C'0, args : (), res : bool . ([%#sops12] postcondition_mut'0 self args res)
   -> ([%#sops13] unnest'0 self.current self.final)
  
  function unnest_refl'0 (self : t_C'0) : ()
  
  axiom unnest_refl'0_spec : forall self : t_C'0 . [%#sops14] unnest'0 self self
  
  function unnest_trans'0 (self : t_C'0) (b : t_C'0) (c : t_C'0) : ()
  
  axiom unnest_trans'0_spec : forall self : t_C'0, b : t_C'0, c : t_C'0 . ([%#sops15] unnest'0 self b)
   -> ([%#sops16] unnest'0 b c)  -> ([%#sops17] unnest'0 self c)
  
  function fn_mut_once'0 (self : t_C'0) (args : ()) (res : bool) : ()
  
  axiom fn_mut_once'0_spec : forall self : t_C'0, args : (), res : bool . [%#sops18] postcondition_once'1 self args res
  = (exists s : borrowed t_C'0 . s.current = self /\ postcondition_mut'0 s args res /\ resolve'0 s.final)
  
  meta "compute_max_steps" 1000000
  
  let rec inversed_if'0 (cond:t_C'0) (branch:t_B'0) (return'  (ret:()))= {[%#s6954] inv'1 branch}
    {[%#s6953] inv'0 cond}
    {[%#s6952] precondition'0 cond () /\ (forall b : bool . precondition'1 branch (b))}
    (! bb0
    [ bb0 = bb1
    | bb1 = bb2
    | bb2 = s0 [ s0 = call'0 {cond} {_7} (fun (_ret':bool) ->  [ &_5 <- _ret' ] s1) | s1 = bb3 ] 
    | bb3 = s0
      [ s0 = {[@expl:type invariant] inv'0 cond} s1
      | s1 = -{resolve'0 cond}- s2
      | s2 = any [ br0 -> {_5 = false} (! bb5) | br1 -> {_5} (! bb4) ]  ]
      
    | bb4 = s0
      [ s0 =  [ &_11 <- (([%#s6950] false)) ] s1
      | s1 = call_once'0 {branch} {_11} (fun (_ret':()) ->  [ &_0 <- _ret' ] s2)
      | s2 = bb7 ]
      
    | bb7 = bb8
    | bb5 = s0
      [ s0 =  [ &_9 <- (([%#s6951] true)) ] s1
      | s1 = call_once'0 {branch} {_9} (fun (_ret':()) ->  [ &_0 <- _ret' ] s2)
      | s2 = bb6 ]
      
    | bb6 = bb8
    | bb8 = bb9
    | bb9 = bb10
    | bb10 = return' {_0} ]
    )
    [ & _0 : () = any_l ()
    | & cond : t_C'0 = cond
    | & branch : t_B'0 = branch
    | & _5 : bool = any_l ()
    | & _7 : () = any_l ()
    | & _9 : bool = any_l ()
    | & _11 : bool = any_l () ]
    
    [ return' (result:())-> {[@expl:postcondition] [%#s6955] exists b : bool . postcondition'0 cond () b
      /\ postcondition_once'0 branch (not b) ()}
      (! return' {result}) ]
    
end
module M_695__valid [#"695.rs" 15 0 15 27]
  let%span s6950 = "695.rs" 16 16 16 20
  let%span s6951 = "695.rs" 22 20 22 25
  let%span s6952 = "695.rs" 14 10 14 71
  let%span s6953 = "695.rs" 18 11 18 15
  let%span s6954 = "695.rs" 17 25 17 45
  let%span s6955 = "695.rs" 20 25 20 26
  let%span s6956 = "695.rs" 20 36 20 37
  let%span s6957 = "695.rs" 19 27 19 62
  let%span s6958 = "695.rs" 4 11 4 77
  let%span s6959 = "695.rs" 6 59 6 63
  let%span s69510 = "695.rs" 6 68 6 74
  let%span s69511 = "695.rs" 5 10 5 89
  let%span sresolve12 = "../../../../creusot-contracts/src/resolve.rs" 41 20 41 34
  
  use prelude.prelude.UInt32
  
  use prelude.prelude.Intrinsic
  
  use prelude.prelude.Borrow
  
  type closure1'1  =
    { field_0'0: uint32 }
  
  use prelude.prelude.Int
  
  predicate inv'0 (_1 : closure1'1)
  
  axiom inv_axiom'0 [@rewrite] : forall x : closure1'1 [inv'0 x] . inv'0 x = true
  
  type closure2'1  =
    { field_0'1: borrowed uint32 }
  
  predicate inv'1 (_1 : closure2'1)
  
  axiom inv_axiom'1 [@rewrite] : forall x : closure2'1 [inv'1 x] . inv'1 x = true
  
  let rec closure1'0 (_1:closure1'1) (return'  (ret:bool))= (! bb0
    [ bb0 = s0
      [ s0 = UInt32.gt {_1.field_0'0} {[%#s6953] (7 : uint32)} (fun (_ret':bool) ->  [ &res <- _ret' ] s1)
      | s1 =  [ &_0 <- res ] s2
      | s2 = return' {_0} ]
       ]
    ) [ & _0 : bool = any_l () | & _1 : closure1'1 = _1 | & res : bool = any_l () ] 
    [ return' (result:bool)-> {[@expl:postcondition] [%#s6954] result = (_1.field_0'0 > (7 : uint32))}
      (! return' {result}) ]
    
  
  predicate resolve'1 (self : borrowed closure2'1) =
    [%#sresolve12] self.final = self.current
  
  predicate resolve'0 (_1 : borrowed closure2'1) =
    resolve'1 _1
  
  predicate unnest'0 [#"695.rs" 19 17 19 64] (self : closure2'1) (_2 : closure2'1) =
    (_2.field_0'1).final = (self.field_0'1).final
  
  let rec closure2'0 (_1:borrowed closure2'1) (b:bool) (return'  (ret:()))= (! bb0
    [ bb0 = any [ br0 -> {b = false} (! bb2) | br1 -> {b} (! bb1) ] 
    | bb1 = s0 [ s0 =  [ &_4 <- [%#s6955] (2 : uint32) ] s1 | s1 = bb3 ] 
    | bb2 = s0 [ s0 =  [ &_4 <- [%#s6956] (1 : uint32) ] s1 | s1 = bb3 ] 
    | bb3 = s0
      [ s0 =  [ &_1 <- { _1 with current = { field_0'1 = { (_1.current).field_0'1 with current = _4 } } } ] s1
      | s1 = -{resolve'0 _1}- s2
      | s2 = return' {_0} ]
       ]
    ) [ & _0 : () = any_l () | & _1 : borrowed closure2'1 = _1 | & b : bool = b | & _4 : uint32 = any_l () ] 
    [ return' (result:())-> {[@expl:postcondition] unnest'0 _1.current _1.final}
      {[@expl:postcondition] [%#s6957] b /\ ((_1.final).field_0'1).current = (2 : uint32)
      \/ not b /\ ((_1.final).field_0'1).current = (1 : uint32)}
      (! return' {result}) ]
    
  
  predicate precondition'0 [#"695.rs" 17 15 17 47] (self : closure1'1) (_ : ()) =
    true
  
  predicate precondition'1 [#"695.rs" 19 17 19 64] (self : closure2'1) (args : bool) =
    let (b) = args in true
  
  predicate postcondition'0 [#"695.rs" 17 15 17 47] (self : closure1'1) (_ : ()) (result : bool) =
    [%#s6954] result = (self.field_0'0 > (7 : uint32))
  
  predicate postcondition_once'0 [#"695.rs" 19 17 19 64] (self : closure2'1) (args : bool) (result : ()) =
    [%#s6957] let (b) = args in b /\ (self.field_0'1).final = (2 : uint32)
    \/ not b /\ (self.field_0'1).final = (1 : uint32)
  
  let rec inversed_if'0 (cond:closure1'1) (branch:closure2'1) (return'  (ret:()))= {[@expl:precondition] [%#s69510] inv'1 branch}
    {[@expl:precondition] [%#s6959] inv'0 cond}
    {[@expl:precondition] [%#s6958] precondition'0 cond () /\ (forall b : bool . precondition'1 branch (b))}
    any
    [ return' (result:())-> {[%#s69511] exists b : bool . postcondition'0 cond () b
      /\ postcondition_once'0 branch (not b) ()}
      (! return' {result}) ]
    
  
  meta "compute_max_steps" 1000000
  
  let rec valid'0 (n:uint32) (return'  (ret:uint32))= (! bb0
    [ bb0 = s0
      [ s0 =  [ &r <- [%#s6950] (0 : uint32) ] s1
      | s1 =  [ &cond <- { field_0'0 = n } ] s2
      | s2 = Borrow.borrow_mut <uint32> {r} (fun (_ret':borrowed uint32) ->  [ &_7 <- _ret' ]  [ &r <- _ret'.final ] s3)
      | s3 =  [ &branch <- { field_0'1 = _7 } ] s4
      | s4 = inversed_if'0 {cond} {branch} (fun (_ret':()) ->  [ &_8 <- _ret' ] s5)
      | s5 = bb1 ]
      
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#s6951] false} s1 | s1 =  [ &_0 <- r ] s2 | s2 = return' {_0} ]  ]
    )
    [ & _0 : uint32 = any_l ()
    | & n : uint32 = n
    | & r : uint32 = any_l ()
    | & cond : closure1'1 = any_l ()
    | & branch : closure2'1 = any_l ()
    | & _7 : borrowed uint32 = any_l ()
    | & _8 : () = any_l () ]
    
    [ return' (result:uint32)-> {[@expl:postcondition] [%#s6952] n > (7 : uint32) /\ result = (2 : uint32)
      \/ n <= (7 : uint32) /\ result = (1 : uint32)}
      (! return' {result}) ]
    
end
